# joule

./: .gitignore  .gitmodules  AGENTS.md  init.lua  joule.json  just  lint.sh  pyproject.toml  test.sh
src/joule/: __init__.py  ast.py  config.py  document_model.py  maybe.py  model.py  parsing.py  parsing2.py  pretty.py  server.py  util.py  visitor.py  workspace_model.py
src/joule/grammar/: __init__.py  jsonnet.grammar  string.grammar
src/joule/model/: __init__.py  document_loader.py  document_store.py  field_ref_resolver.py  import_resolver.py  scope_builder.py  scope_resolver.py
src/joule/parser/: __init__.py  jsonnet.py  string.py
src/joule/providers/: __init__.py  definition_provider.py  document_highlight_provider.py  document_symbol_provider.py  folding_range_provider.py  inlay_hint_provider.py  references_provider.py  rename_provider.py
src/just/: __init__.py  ast.py  server.py
tests/: __init__.py  dsl.py  run.sh  test_ast.py  test_def_ref.py  test_definition.py  test_document_loader.py  test_document_store.py  test_parser.py  test_parsy.py  test_references.py  test_scope_resolution.py  test_scoping.py
tests/dsl/: __init__.py  fake_document.py  marked_range.py  marked_spans.py  util.py
