[project]
name = "joule"
version = "0.1.0"
description = "A toy Jsonnet language server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygls>=2.0.0",
    "rich>=14.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-jsonnet",
    "typer>=0.20.1",
]

[project.scripts]
joule = "joule:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
test = [
    "parsy>=2.2",
]

[tool.ruff]
exclude = [
    "vendor"
]

[tool.uv.workspace]
members = [
    "vendor/tree-sitter-jsonnet",
]

[tool.uv.sources]
tree-sitter-jsonnet = { workspace = true }
