[project]
name = "joule"
version = "0.1.0"
description = "A toy Jsonnet language server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "parsy>=2.2",
    "pydantic>=2.12.5",
    "pygls>=2.0.0",
    "rich>=14.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-jsonnet",
    "typer>=0.20.1",
]

[project.scripts]
joule = "joule:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
exclude = [
    "vendor"
]

[tool.uv.workspace]
members = [
    "vendor/tree-sitter-jsonnet",
]

[tool.uv.sources]
tree-sitter-jsonnet = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:int argument support is deprecated",
    "ignore:'asyncio.iscoroutinefunction' is deprecated",
]
addopts = "--cov=joule --cov-report=html"

[tool.coverage.run]
source = ["src/joule"]

[tool.coverage.report]
show_missing = true
